新增环境变量，新增docker文件